import { storiesOf } from "@storybook/react";
import StoryRouter from "storybook-react-router";
import * as React from "react";
import { NavBar } from "./NavBar";
import { NavErrorBar } from "./NavErrorBar";

const balance = "100,203";
const votingBalance = "1,200";
const userAccount = "0xd26114cd6ee289accf82350c8d8487fedb8a0c07";
const userRevealVotesCount = 10;
const userClaimRewardsCount = 4;
const userChallengesStartedCount = 2;
const userChallengesVotedOnCount = 15;

storiesOf("Common / Nav / Nav Bar", module)
  .addDecorator(StoryRouter())
  .add("Global Nav", () => {
    return (
      <NavBar
        balance={balance}
        votingBalance={votingBalance}
        userEthAddress={userAccount}
        authenticationURL="#auth"
        userRevealVotesCount={userRevealVotesCount}
        userClaimRewardsCount={userClaimRewardsCount}
        userChallengesStartedCount={userChallengesStartedCount}
        userChallengesVotedOnCount={userChallengesVotedOnCount}
        joinAsMemberUrl="#buy-tokens"
        buyCvlUrl="#become-member"
        applyURL="#apply"
        useGraphQL={false}
        onLogoutPressed={() => {
          console.log("thinged");
        }}
        onLoginPressed={() => {
          console.log("thinged");
        }}
        onSignupPressed={() => {
          console.log("thinged");
        }}
        onModalDefocussed={() => {
          console.log("thinged");
        }}
        onViewDashboardPressed={() => {
          console.log("thinged");
        }}
      />
    );
  })
  .add("Nav Error Bar", () => {
    return <NavErrorBar />;
  });
