// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common / Nav / Nav Bar Global Nav 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-ccLTTT gJtpAv"
    >
      <div
        className="sc-hlILIN ckhOCu"
      >
        <div
          className="sc-bJHhxl fGbmqv"
        >
          <div
            className="sc-jQMNup gnXvy"
          >
            <a
              href="https://civil.co"
            >
              <svg
                height="21"
                viewBox="0 0 72 21"
                width="72"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#FFFFFF"
                >
                  <path
                    d="M.5 10c0-5.76 4.357-10 9.856-10 3.58 0 6.069 1.414 7.729 3.77L15.75 5.445c-1.297-1.728-2.905-2.67-5.499-2.67-3.838 0-6.64 3.089-6.64 7.225 0 4.24 2.853 7.225 6.744 7.225 2.49 0 4.357-.942 5.81-2.827L18.5 16.02C16.529 18.691 13.987 20 10.252 20 4.805 20 .5 15.76.5 10M22.5 20h3V1h-3zM29 1h3.382l5.782 13.228L43.782 1H47l-8.782 20h-.163zM50.5 20h3V1h-3zM59.5 1h3.175v16.344H71.5V20h-12z"
                  />
                </g>
              </svg>
            </a>
          </div>
          <div
            className="sc-jRhVzh lbGXrs"
          >
            <div
              className="sc-bYnzgO kfUtrd"
            >
              <span
                className="sc-cPuPxo IoiaZ"
              >
                <a
                  href="/registry"
                  onClick={[Function]}
                >
                  Registry
                </a>
                <div
                  className="sc-hvvHee huMhLE"
                />
              </span>
              <div
                className="sc-fvLVrH gVesKj"
              >
                <a
                  href="/registry"
                  onClick={[Function]}
                >
                  Registry Home
                </a>
                <a
                  href="/parameterizer"
                  onClick={[Function]}
                >
                  Registry Parameters
                </a>
                <a
                  href="/contract-addresses"
                  onClick={[Function]}
                >
                  Contract Addresses
                </a>
              </div>
            </div>
            <a
              href="https://civil.co/constitution/"
            >
              Constitution
            </a>
            <a
              href="https://civilfound.org/"
            >
              Foundation
            </a>
            <a
              href="https://help.civil.co/"
            >
              Help
            </a>
          </div>
          <div
            className="sc-iHhHRJ ftRHRE"
          >
            <div
              onClick={[Function]}
            >
              <svg
                height="42"
                viewBox="0 0 42 42"
                width="42"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 26h18v-2H12v2zm0-8h18v-2H12v2z"
                  fill="#FFFFFF"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-kqlzXE iojMDB"
          />
        </div>
        <div
          className="sc-TuwoP iLjRNZ"
        >
          <span
            className="sc-lnrBVv eXvbRQ"
          >
            <a
              href="/dashboard"
              onClick={[Function]}
            >
              My Dashboard
            </a>
          </span>
          <div>
            <div
              className="sc-epGmkI kBKwGQ"
              onClick={[Function]}
            >
              <div
                className="sc-dphlzf hBhWZQ"
              >
                <svg
                  height="33"
                  viewBox="0 0 32 33"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    transform="translate(1 1)"
                  >
                    <ellipse
                      cx="17"
                      cy="15.5"
                      rx="13"
                      ry="15.5"
                      stroke="#FFFFFF"
                    />
                    <path
                      d="M15 .172A11.117 11.117 0 0 0 13.051 0C5.864 0 0 6.921 0 15.5S5.864 31 13.051 31c.658 0 1.309-.058 1.949-.172C8.558 29.71 3.642 23.26 3.642 15.5 3.642 7.74 8.558 1.29 15 .172z"
                      stroke="#FFFFFF"
                    />
                    <text
                      fill="#FFFFFF"
                      fontFamily="LibreFranklin-Bold, Libre Franklin"
                      fontSize="9"
                    >
                      <tspan
                        x="8"
                        y="18"
                      >
                        CVL
                      </tspan>
                    </text>
                    <path
                      d="M8 1h3v1.227H8zM3.813 3.864H8V5.09H3.812zM2.125 6.727H5.5v1.227H2.125zM0 12.455h3.813v1.227H0zM0 15.318h3.813v1.227H0zM0 18.182h3.813v1.227H0zM1 21.046h3.938v1.227H1zM2.969 23.909h3.094v1.227H2.969zM5.063 26.773h3.812V28H5.062zM1 9.59h3.375v1.228H1z"
                      fill="#FFFFFF"
                      fillRule="nonzero"
                    />
                  </g>
                </svg>
                <span
                  className="sc-fCPvlr xwdjS"
                >
                  <span
                    className="sc-gAmQfK MjRbR"
                  >
                    100,203
                  </span>
                  <span
                    className="sc-hAXbOi jaqjIL"
                  >
                    1,200
                  </span>
                </span>
                <div
                  className="sc-cCVOAp wXLNW"
                >
                  <figure
                    className="sc-cfWELz fmxkDn"
                  />
                  <div
                    className="sc-kAdXeD fVPzhw"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Nav / Nav Bar
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Global Nav
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  StoryRouter
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      story
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          anonymous
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      links
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      routerProps
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StoryRouter
              " Component
            </h3>
            <table>
              <thead>
                <tr>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    property
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    propType
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    required
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    default
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    story
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      func
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    yes
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    links
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      object
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    routerProps
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      object
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Common / Nav / Nav Bar Nav Error Bar 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-eSePXt gZDoaG"
    >
      Please Switch To Rinkeby Testnet
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Nav / Nav Bar
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Nav Error Bar
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  StoryRouter
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      story
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          anonymous
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      links
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      routerProps
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StoryRouter
              " Component
            </h3>
            <table>
              <thead>
                <tr>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    property
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    propType
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    required
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    default
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    story
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      func
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    yes
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    links
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      object
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    routerProps
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      object
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
